Prevent Loved poll background from overflowing rounded corner

--- a/resources/assets/less/bem/page-extra.less
+++ b/resources/assets/less/bem/page-extra.less
@@ -18,6 +18,7 @@
   background-color: hsl(var(--hsl-b4));
   font-size: @font-size--title-small;
   border-radius: @border-radius--large;
+  overflow: hidden;
 
   @media @desktop {
     --gutter: var(--gutter-desktop);
